@@ -288,7 +288,36 @@ bool CGUIMediaWindow::OnMessage(CGUIMessage& message)
           nCurrentItem = LOWORD(message.GetParam2());
           nPreviousItem = HIWORD(message.GetParam2());
         }
+        CStdString strCurrentItem = g_playlistPlayer.GetPlaylist(g_playlistPlayer.GetCurrentPlaylist())[nCurrentItem].m_strPath;
+        CStdString strPreviousItem;
+        if (nPreviousItem > -1)
+          strPreviousItem = g_playlistPlayer.GetPlaylist(g_playlistPlayer.GetCurrentPlaylist())[nPreviousItem].m_strPath;
 
+        // need to mark currently playing item by path, not index
+        bool bFoundCurrent = false;
+        bool bFoundPrev = false;
+        if (strPreviousItem.IsEmpty())
+          bFoundPrev = true;
+        for (int i = 0; i < m_vecItems.Size(); ++i)
+        {
+          CFileItem* pItem = m_vecItems[i];
+          if (pItem->m_strPath.Equals(strCurrentItem))
+          {
+            pItem->Select(true);
+            bFoundCurrent = true;
+          }
+          else if (!bFoundPrev && pItem->m_strPath.Equals(strPreviousItem))
+          {
+            pItem->Select(false);
+            bFoundPrev = true;
+          }
+
+          // abort when both have been found
+          if (bFoundPrev && bFoundCurrent)
+            break;
+        }
+
+        /*
         int nFolderCount = m_vecItems.GetFolderCount();
 
         // is the previous item in this directory
@@ -318,6 +347,7 @@ bool CGUIMediaWindow::OnMessage(CGUIMessage& message)
             }
           } // for (int i=nFolderCount, n=0; i<(int)m_vecItems.size(); i++)
         }
+        */
 
       }
     }
@@ -504,6 +534,7 @@ bool CGUIMediaWindow::Update(const CStdString &strDirectory)
   UpdateButtons();
 
   int iCurrentPlaylistSong = -1;
+  CStdString strCurrentPlaylistSong;
   // Search current playlist item
   CStdString strCurrentDirectory = m_vecItems.m_strPath;
   if (CUtil::HasSlashAtEnd(strCurrentDirectory))
@@ -512,6 +543,7 @@ bool CGUIMediaWindow::Update(const CStdString &strDirectory)
   if (m_guiState.get() && g_playlistPlayer.GetCurrentPlaylist()==m_guiState->GetPlaylist() && strCurrentDirectory==m_guiState->GetPlaylistDirectory())
   {
     iCurrentPlaylistSong = g_playlistPlayer.GetCurrentSong();
+    strCurrentPlaylistSong = g_playlistPlayer.GetPlaylist(g_playlistPlayer.GetCurrentPlaylist())[iCurrentPlaylistSong].m_strPath;
   }
 
   bool bSelectedFound = false, bCurrentSongFound = false;
@@ -539,9 +571,18 @@ bool CGUIMediaWindow::Update(const CStdString &strDirectory)
     // synchronize playlist with current directory
     if (!bCurrentSongFound && iCurrentPlaylistSong > -1)
     {
+      /*
       if (!pItem->m_bIsFolder && !pItem->IsPlayList() && !pItem->IsNFO())
         iSongInDirectory++;
       if (iSongInDirectory == iCurrentPlaylistSong)
+      {
+        pItem->Select(true);
+        bCurrentSongFound = true;
+      }
+      */
+
+      // neet to match current song on the path, not the index
+      if (pItem->m_strPath.Equals(strCurrentPlaylistSong))
       {
         pItem->Select(true);
         bCurrentSongFound = true;
